--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="spend_amount">Spend Amount</string>
     <string name="add">Add</string>
     <string name="location">Location</string>
+    <string name="analysis">Analysis</string>
 </resources>
