--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="add">Add</string>
     <string name="location">Location</string>
     <string name="analysis">Analysis</string>
+    <string name="spending_per_month">Spending per month</string>
+    <string name="spending_per_sector">Spending per sector</string>
 </resources>
