--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="addNote">Add</string>
     <string name="what_do_you_want_to_take_a_note_of">What do you want to take a note of?</string>
     <string name="sector">Sector</string>
+    <string name="adding_note">Adding Note</string>
 </resources>
